--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "typescript": "~5.1.6"
   },
   "dependencies": {
+    "@aws-cdk/aws-cognito-identitypool-alpha": "^2.89.0-alpha.0",
     "aws-cdk-lib": "2.89.0",
     "constructs": "^10.0.0",
     "dotenv": "^16.3.1",
