--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,6 +45,7 @@
     "autoprefixer": "10.4.14",
     "aws-amplify": "^5.3.6",
     "aws-crt": "^1.17.0",
+    "axios": "^1.4.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "eslint": "8.46.0",
