--- a/frontend/package.json
+++ b/frontend/package.json
@@ -56,6 +56,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.2",
+    "react-query": "^3.39.3",
+    "swr": "^2.2.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.6",
