--- a/frontend/amplify.yml
+++ b/frontend/amplify.yml
@@ -4,6 +4,7 @@ applications:
       phases:
         preBuild:
           commands:
+            - npm install --package-lock-only
             - npm ci
         build:
           commands:
