--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,8 @@
     "watch": "tsc -w",
     "test": "jest",
     "cdk": "cdk",
-    "deploy": "cdk synth && cdk deploy"
+    "deploy": "cdk synth && cdk deploy",
+    "authtest": "jest --verbose ./__tests__/auth.test.ts"
   },
   "devDependencies": {
     "@types/jest": "^29.5.3",
@@ -22,7 +23,11 @@
   },
   "dependencies": {
     "@aws-cdk/aws-cognito-identitypool-alpha": "^2.89.0-alpha.0",
+    "@aws-sdk/client-cognito-identity-provider": "^3.388.0",
+    "@aws-sdk/client-s3": "^3.388.0",
+    "@types/chance": "^1.1.3",
     "aws-cdk-lib": "2.89.0",
+    "chance": "^1.1.11",
     "constructs": "^10.0.0",
     "dotenv": "^16.3.1",
     "source-map-support": "^0.5.21"
