--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@aws-sdk/client-cognito-identity-provider": "^3.388.0",
     "@aws-sdk/client-s3": "^3.385.0",
     "@headlessui/react": "^1.7.16",
+    "@heroicons/react": "^2.0.18",
     "@hookform/resolvers": "^3.1.1",
     "@radix-ui/react-accessible-icon": "^1.0.2",
     "@radix-ui/react-accordion": "^1.1.1",
